--- a/contracts/gb1/contract/Cargo.toml
+++ b/contracts/gb1/contract/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "hello_contract"
+name = "gb1_near"
 version = "1.0.0"
+authors = ["Near Inc <hello@near.org>"]
 edition = "2021"
 
 [lib]
@@ -8,8 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 near-sdk = "4.0.0"
-itertools = "0.10.3"
-near-contract-standards = "4.0.0"
+serde = "1.0.140"
 uint = { version = "0.9.3", default-features = false }
 
 [profile.release]
